// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/analytics/doughnut_chart.tsx should match snapshot, loaded with data 1`] = `
<div>
  <div
    class="col-sm-6"
  >
    <div
      class="total-count"
    >
      <div
        class="title"
      >
        Test
      </div>
      <div
        class="content"
      >
        <canvas
          height="400"
          width="600"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/analytics/doughnut_chart.tsx should match snapshot, loaded without data 1`] = `
<div>
  <div
    class="col-sm-6"
  >
    <div
      class="total-count"
    >
      <div
        class="title"
      >
        Test
      </div>
      <div
        class="content"
      >
        Loading...
      </div>
    </div>
  </div>
</div>
`;

exports[`components/analytics/doughnut_chart.tsx should match snapshot, on loading 1`] = `
<div>
  <div
    class="col-sm-6"
  >
    <div
      class="total-count"
    >
      <div
        class="title"
      >
        Test
      </div>
      <div
        class="content"
      >
        Loading...
      </div>
    </div>
  </div>
</div>
`;
